<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_GroupE_TE2_HMI_Link" Id="{00cf832a-7d21-41e4-9d3c-0448fb9ff75c}">
    <Declaration><![CDATA[TYPE ST_GroupE_TE2_HMI_Link EXTENDS ST_BaseGroupElement_HMI_Link :
STRUCT
	stGroupE_TE2		: ST_GroupE_TE2_HMI;
	
	stControlE1_TE2		: ST_ControlE_TE2_HMI_Link;
	stControlE2_TE2		: ST_ControlE_TE2_HMI_Link;
	
	stComponetE1_TE2	: ST_Component_TE2_HMI_Link;
	stComponetE2_TE2	: ST_Component_TE2_HMI_Link;
	stComponetE3_TE2	: ST_Component_TE2_HMI_Link;
	stComponetE4_TE2	: ST_Component_TE2_HMI_Link;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>